rhaiis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhaiis-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rhaiis-runner
  template:
    metadata:
      labels:
        app: rhaiis-runner
    spec:
      nodeSelector:
        nvidia.com/gpu.present: "true"
      containers:
        - name: rhaiis
          image: registry.redhat.io/rhaiis/vllm-cuda-rhel9:3.0.0
          args: ["--max-model-len", "8192","--gpu-memory-utilization", "0.6","--model", "RedHatAI/Qwen3-4B-quantized.w4a16"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: cache-volume
              mountPath: /opt/app-root/src/.cache
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: rhaiis-runner-pvc
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 4Gi
