rhaiis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rhaiis-runner-service
  labels:
    app: rhaiis-runner
spec:
  selector:
    app: rhaiis-runner
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
